[metadata]
name = d-mark
version = attr: dmark.__version__
description = markup language for writing text
long_description = D★Mark is a markup language aimed at being able to write semantically meaningful text without limiting itself to the semantics provided by HTML or Markdown.
url = https://github.com/abathur/d-mark-python
keywords = markup-language, parser
project_urls =
	Homepage = https://denisdefreyne.github.io/d-mark/
	Documentation = https://denisdefreyne.github.io/d-mark/
	Ruby implementation = https://github.com/denisdefreyne/d-mark
	Rust implementation = https://github.com/denisdefreyne/d-mark-rust
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
author = Travis A. Everett
author_email = travis.a.everett+dmark-python@gmail.com

[options]
zip_safe = False
include_package_data = True
packages = find:
